# argon2-cffi-bindings

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/workflows/: ci.yml  codeql-analysis.yml  main.yml  wheels.yml  zizmor.yml
src/_argon2_cffi_bindings/: _ffi_build.py
tests/: test_build.py
